--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/NadiaRom/ecoaction#readme",
   "dependencies": {
+    "chroma-js": "^2.0.2",
     "d3": "^5.7.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "tippy.js": "^3.3.0"
   }
 }
