--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "chroma-js": "^2.0.2",
     "d3": "^5.7.0",
+    "intersection-observer": "^0.5.1",
     "jquery": "^3.3.1",
+    "scrollama": "^1.4.4",
     "tippy.js": "^3.3.0"
   }
 }
