--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3": "^5.7.0",
     "intersection-observer": "^0.5.1",
     "jquery": "^3.3.1",
+    "labella": "^1.1.4",
     "scrollama": "^1.4.4",
     "tippy.js": "^3.4.1"
   },
