--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "modules for ecoaction viz",
   "main": "index.js",
   "scripts": {
-    "build": "npx babel index.js -o bundle.js && npx browserify bundle.js -o bundle.js && npx postcss style.css -o style.css -u autoprefixer",
+    "build": "npx sass style.scss style.css && npx babel index.js -o bundle.js && npx browserify bundle.js -o bundle.js && npx postcss style.css -o style.css -u autoprefixer",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -39,6 +39,7 @@
     "autoprefixer": "^9.4.5",
     "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "browserify": "^16.2.3",
-    "postcss-cli": "^6.1.1"
+    "postcss-cli": "^6.1.1",
+    "sass": "^1.17.2"
   }
 }
